# py_mangas_api

./: .gitignore  README.md  compose.yaml  pyproject.toml
mangas_api/: app.py  db.py  models.py  schemas.py  settings.py
mangas_api/routers/: users.py
migrations/: env.py
migrations/versions/: 03174f0bcf16_create_users_table.py
py_mangas_api/: app.py
tests/: conftest.py  test_app.py
