[tool.poetry]
name = "mangas-api"
version = "0.1.0"
description = "Projeto de API para um app/site de gerenciamento e leitura de histórias em quadrinho, ex: Mangas, Manhua, Manhwa."
authors = ["David Kukert <dkukert@kukert.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13.1"
fastapi = {extras = ["all"], version = "^0.115.6"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
factory-boy = "^3.3.1"
freezegun = "^1.5.1"
testcontainers = "^4.9.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.taskipy.tasks]
run = 'fastapi dev mangas_api/app.py'
test = 'pytest --cov=mangas_api -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
